# template-monorepo-python

./: README.md
.devcontainer/module-one/: Dockerfile  devcontainer.json
.devcontainer/module-two/: Dockerfile  devcontainer.json
module-one/: Dockerfile  check-python-version.ipynb  pyproject.toml
module-one/src/package1/: check-python-version.ipynb
module-two/: Dockerfile  check-python-version.ipynb  pyproject.toml
