[tool.poetry]
name = "package1"
version = "0.1.0"
description = "This is the first module of this Monorepo Template"
authors = ["Roberto Hernandez <betohr60@gmail.com>"]
readme = "README.md"
packages = [{include = "package1", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ipykernel = "6.21.*"
pandas = "^2.0.3"
mlflow = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"