[tool.poetry]
name = "package2"
version = "0.1.0"
description = "This is the second module of this Monorepo Template"
authors = ["Roberto Hernandez <betohr60@gmail.com>"]
readme = "README.md"
packages = [{include = "package2", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ipykernel = "6.21.*"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"